[gd_scene load_steps=42 format=2]

[ext_resource path="res://assets/3d/garage/Garage.glb" type="PackedScene" id=1]
[ext_resource path="res://assets/ui/chevron-down.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/Peter Marker.otf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/ui/chevron-right.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/chevron-left.png" type="Texture" id=5]
[ext_resource path="res://levels/Camera.gd" type="Script" id=6]
[ext_resource path="res://levels/RepairGarage.gd" type="Script" id=7]
[ext_resource path="res://assets/music/(Garage) (haunted choir) tremblingmists.mp3" type="AudioStream" id=8]
[ext_resource path="res://BikeWall3D.tscn" type="PackedScene" id=9]
[ext_resource path="res://levels/BlinkyLight.gd" type="Script" id=10]
[ext_resource path="res://ToolWall.tscn" type="PackedScene" id=11]
[ext_resource path="res://MapUI.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/enemy/mouse_3.png" type="Texture" id=13]
[ext_resource path="res://levels/MouseManager.gd" type="Script" id=14]
[ext_resource path="res://assets/enemy/mouse_2.png" type="Texture" id=15]
[ext_resource path="res://assets/enemy/mouse_1.png" type="Texture" id=16]
[ext_resource path="res://assets/enemy/mouse_drop_1.png" type="Texture" id=17]
[ext_resource path="res://assets/enemy/mouse_peek_2.png" type="Texture" id=18]
[ext_resource path="res://assets/enemy/mouse_peek_1.png" type="Texture" id=19]
[ext_resource path="res://assets/enemy/mouse_drop_3.png" type="Texture" id=20]
[ext_resource path="res://assets/enemy/mouse_peek_3.png" type="Texture" id=21]
[ext_resource path="res://assets/enemy/mouse_drop_2.png" type="Texture" id=22]

[sub_resource type="ProceduralSky" id=1]
sky_top_color = Color( 0.0235294, 0.00392157, 0.0784314, 1 )
sky_horizon_color = Color( 0.0392157, 0.00784314, 0.129412, 1 )
ground_bottom_color = Color( 0, 0, 0, 1 )
ground_horizon_color = Color( 0.00784314, 0.0196078, 0.0862745, 1 )
sun_color = Color( 1, 0.964706, 0.890196, 1 )
sun_energy = 0.16

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="QuadMesh" id=10]

[sub_resource type="SpatialMaterial" id=11]
flags_transparent = true
albedo_texture = ExtResource( 16 )

[sub_resource type="SpatialMaterial" id=12]
flags_transparent = true
albedo_texture = ExtResource( 15 )

[sub_resource type="SpatialMaterial" id=13]
flags_transparent = true
albedo_texture = ExtResource( 13 )

[sub_resource type="SpatialMaterial" id=14]
flags_transparent = true
albedo_texture = ExtResource( 17 )

[sub_resource type="SpatialMaterial" id=15]
flags_transparent = true
albedo_texture = ExtResource( 22 )

[sub_resource type="SpatialMaterial" id=16]
flags_transparent = true
albedo_texture = ExtResource( 20 )

[sub_resource type="SpatialMaterial" id=17]
flags_transparent = true
albedo_texture = ExtResource( 19 )

[sub_resource type="SpatialMaterial" id=18]
flags_transparent = true
albedo_texture = ExtResource( 18 )

[sub_resource type="SpatialMaterial" id=19]
flags_transparent = true
albedo_texture = ExtResource( 21 )

[node name="RepairGarage" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.406517, 0.0512238, 0.226578 )
script = ExtResource( 7 )
music = ExtResource( 8 )

[node name="Garage2" parent="." instance=ExtResource( 1 )]

[node name="CameraManager" type="Spatial" parent="."]
script = ExtResource( 6 )

[node name="BikeCamera" type="Camera" parent="CameraManager"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.4672, 1.62131, 0.552591 )
current = true

[node name="ToolsCamera" type="Camera" parent="CameraManager"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -3.48905, 1.98153, -0.537747 )

[node name="HallCamera" type="Camera" parent="CameraManager"]
transform = Transform( 1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, -1.47959, 1.98153, -0.537747 )

[node name="StorageCamera" type="Camera" parent="CameraManager"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -3.16158, 1.17233, 0.314501 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="BikeOmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.67552, 1.89085, 0.05889 )
light_energy = 0.642
omni_range = 4.84239
omni_attenuation = 2.14355

[node name="GlobalOmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.171381, 3.28445, 7.52061 )
visible = false
light_energy = 0.239
omni_range = 15.707
omni_attenuation = 1.6245

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Storage" type="Button" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -145.0
margin_top = -147.0
margin_right = 145.0
custom_fonts/font = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
action_mode = 0
icon = ExtResource( 2 )
flat = true
icon_align = 1

[node name="Tools" type="Button" parent="CanvasLayer"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -75.0
margin_right = 290.0
margin_bottom = 75.0
custom_fonts/font = SubResource( 3 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
action_mode = 0
icon = ExtResource( 5 )
flat = true
icon_align = 1
__meta__ = {
"_editor_description_": "Tools"
}

[node name="Hallway" type="Button" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -290.0
margin_top = -75.0
margin_bottom = 75.0
custom_fonts/font = SubResource( 3 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
action_mode = 0
icon = ExtResource( 4 )
flat = true
icon_align = 1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="MapUI" parent="CanvasLayer" instance=ExtResource( 12 )]

[node name="BikeWall3D" parent="." instance=ExtResource( 9 )]
transform = Transform( 2.67151, 0, 0, 0, 2.67151, 0, 0, 0, 1, -2.51807, 1.01412, -2.09639 )

[node name="ToolsLight" type="SpotLight" parent="."]
transform = Transform( 1.50416e-09, -1, -4.36855e-08, -0.0344111, -4.37114e-08, 0.999408, -0.999408, 0, -0.0344111, -5.67822, 4.45497, -0.547614 )
light_energy = 2.636

[node name="HallLight" type="SpotLight" parent="."]
transform = Transform( 1.50416e-09, -1, -4.36855e-08, -0.0344111, -4.37114e-08, 0.999408, -0.999408, 0, -0.0344111, 9.21803, 4.96511, -0.186167 )
light_energy = 1.05
light_specular = 1.674
spot_range = 8.531
spot_angle = 25.3
script = ExtResource( 10 )

[node name="HallLight2" type="SpotLight" parent="."]
transform = Transform( 1.50416e-09, -1, -4.36855e-08, -0.0344111, -4.37114e-08, 0.999408, -0.999408, 0, -0.0344111, 3.02331, 4.96511, -0.186167 )
light_energy = 0.317
light_specular = 1.674
spot_range = 8.531
spot_angle = 25.3

[node name="ToolWall" parent="." instance=ExtResource( 11 )]
transform = Transform( -6.53776e-08, 0, 1.49566, 0, 1.49566, 0, -1.49566, 0, -6.53776e-08, -5.7129, 1.71801, -0.669843 )

[node name="Standlight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6.80367, 0.305209, -0.240087 )
light_energy = 0.04
omni_range = 1.08737

[node name="DropLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6.80367, 3.5972, -0.240087 )
light_energy = 0.04
omni_range = 1.26307

[node name="PeekLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.04094, 1.33617, 1.76904 )
light_energy = 0.04
omni_range = 1.26307

[node name="MouseManager" type="Spatial" parent="."]
script = ExtResource( 14 )

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="MouseManager"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8.6046, 2.12424, -0.0396755 )
bus = "Mouse"

[node name="Stand" type="Spatial" parent="MouseManager"]

[node name="Happy" type="MeshInstance" parent="MouseManager/Stand"]
transform = Transform( -1.33974e-07, 0, -3.06498, 0, 3.06498, 0, 3.06498, 0, -1.33974e-07, 7.30434, 0.163732, -0.373877 )
visible = false
mesh = SubResource( 10 )
skeleton = NodePath("../..")
material/0 = SubResource( 11 )

[node name="Annoyed" type="MeshInstance" parent="MouseManager/Stand"]
transform = Transform( -1.33974e-07, 0, -3.06498, 0, 3.06498, 0, 3.06498, 0, -1.33974e-07, 3.7858, 0.163732, -0.373877 )
visible = false
mesh = SubResource( 10 )
skeleton = NodePath("../..")
material/0 = SubResource( 12 )

[node name="Mad" type="MeshInstance" parent="MouseManager/Stand"]
transform = Transform( -1.33974e-07, 0, -3.06498, 0, 3.06498, 0, 3.06498, 0, -1.33974e-07, 1.62177, 0.163732, -0.373877 )
visible = false
mesh = SubResource( 10 )
skeleton = NodePath("../..")
material/0 = SubResource( 13 )

[node name="Drop" type="Spatial" parent="MouseManager"]

[node name="Happy" type="MeshInstance" parent="MouseManager/Drop"]
transform = Transform( -1.33974e-07, 0, -3.06498, 2.67949e-07, -3.06498, -1.17124e-14, -3.06498, -2.67949e-07, 1.33974e-07, 7.30434, 3.7394, -0.234414 )
visible = false
mesh = SubResource( 10 )
skeleton = NodePath("../..")
material/0 = SubResource( 14 )

[node name="Annoyed" type="MeshInstance" parent="MouseManager/Drop"]
transform = Transform( -1.33974e-07, 0, -3.06498, 2.67949e-07, -3.06498, -1.17124e-14, -3.06498, -2.67949e-07, 1.33974e-07, 3.23622, 3.7394, -0.143829 )
visible = false
mesh = SubResource( 10 )
skeleton = NodePath("../..")
material/0 = SubResource( 15 )

[node name="Mad" type="MeshInstance" parent="MouseManager/Drop"]
transform = Transform( -1.33974e-07, 0, -3.06498, 2.67949e-07, -3.06498, -1.17124e-14, -3.06498, -2.67949e-07, 1.33974e-07, 1.49313, 3.7394, -0.428421 )
visible = false
mesh = SubResource( 10 )
skeleton = NodePath("../..")
material/0 = SubResource( 16 )

[node name="Peek" type="Spatial" parent="MouseManager"]

[node name="Happy" type="MeshInstance" parent="MouseManager/Peek"]
transform = Transform( -1.33974e-07, 0, -3.06498, 2.16727, 2.16727, -9.47342e-08, 2.16727, -2.16727, -9.47342e-08, 1.41959, 0.711573, 2.17832 )
visible = false
mesh = SubResource( 10 )
skeleton = NodePath("../..")
material/0 = SubResource( 17 )

[node name="Annoyed" type="MeshInstance" parent="MouseManager/Peek"]
transform = Transform( -1.33974e-07, 0, -3.06498, 2.16727, 2.16727, -9.47342e-08, 2.16727, -2.16727, -9.47342e-08, 0.805936, 1.00666, 1.4621 )
visible = false
mesh = SubResource( 10 )
skeleton = NodePath("../..")
material/0 = SubResource( 18 )

[node name="Mad" type="MeshInstance" parent="MouseManager/Peek"]
transform = Transform( -1.33974e-07, 0, -3.06498, 2.16727, 2.16727, -9.47342e-08, 2.16727, -2.16727, -9.47342e-08, 0.197142, 1.21967, 0.887849 )
visible = false
mesh = SubResource( 10 )
skeleton = NodePath("../..")
material/0 = SubResource( 19 )

[node name="SpotLight" type="SpotLight" parent="MouseManager"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 2.05747, -0.549289 )
visible = false
light_energy = 16.0
light_specular = 16.0
spot_range = 11.6696
spot_attenuation = 2.21914
spot_angle = 72.3631
spot_angle_attenuation = 6.72718

[connection signal="pressed" from="CanvasLayer/Storage" to="." method="_on_Storage_pressed"]
[connection signal="pressed" from="CanvasLayer/Tools" to="." method="_on_Tools_pressed"]
[connection signal="pressed" from="CanvasLayer/Hallway" to="." method="_on_Hallway_pressed"]
